--- a/bin/md5/Makefile
+++ b/bin/md5/Makefile
@@ -1,9 +1,9 @@
-#	$OpenBSD: Makefile,v 1.5 1997/07/17 05:45:01 millert Exp $
+#	$OpenBSD: Makefile,v 1.6 2001/06/03 17:51:29 millert Exp $
 
 PROG=	md5
 MAN=	md5.1 sha1.1 rmd160.1
 LINKS=	${BINDIR}/md5 ${BINDIR}/sha1 \
 	${BINDIR}/md5 ${BINDIR}/rmd160
-COPTS+=	-Wall -Wconversion -Wmissing-prototypes -Werror
+COPTS+=	-ansi -Wall -Wconversion -Wmissing-prototypes -Werror
 
 .include <bsd.prog.mk>
