--- a/sbin/kbd/Makefile
+++ b/sbin/kbd/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.9 2001/03/08 08:00:16 maja Exp $
+#	$OpenBSD: Makefile,v 1.10 2001/06/04 20:53:22 maja Exp $
 
 PROG=	kbd
 MAN=	kbd.8
@@ -8,7 +8,8 @@ CFLAGS+=-I${.CURDIR}
 
 .if (${MACHINE} == "arc")
 SRCS+=	kbd_i386.c
-.elif (${MACHINE} == "i386") || (${MACHINE} == "powerpc")
+.elif (${MACHINE} == "i386") || (${MACHINE} == "powerpc")  || \
+      (${MACHINE} == "vax")
 SRCS+=	kbd_wscons.c
 LDADD=	-lkvm
 DPADD=	${LIBKVM}
