--- a/usr.sbin/Makefile
+++ b/usr.sbin/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.80 2001/06/02 18:21:24 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.81 2001/06/04 22:18:19 deraadt Exp $
 
 # not yet done: catman
 
@@ -11,13 +11,13 @@ SUBDIR=	ac accton adduser amd arp bootpd bootpgw bootpef bootptest \
 	mailwrapper mopd mtree named \
 	netgroup_mkdb openssl pkg pkg_install portmap ppp pppd pppoe pstat \
 	pwd_mkdb quot quotaon rarpd rbootd rdconfig rdate repquota rmt \
-	rpc.bootparamd rpc.lockd rwhod \
+	rpc.bootparamd rpc.lockd rpc.pcnfsd rwhod \
 	sa sesd sliplogin slstats spppcontrol spray \
 	syslogd tcpdump timed tokenadm tokeninit traceroute trpt trsp \
 	usbdevs user vipw vnconfig wsmoused zdump zic
 
 # LICENSING ISSUES:
-# rpc.pcnfsd mrouted mrinfo mtrace map-mbone
+# mrouted mrinfo mtrace map-mbone
 
 # IPv6
 SUBDIR+=faithd ifmcstat ndp rip6query route6d rtadvd rtsold traceroute6
