--- a/regress/Makefile
+++ b/regress/Makefile
@@ -1,9 +1,9 @@
-#	$OpenBSD: Makefile,v 1.4 2001/01/29 02:05:33 niklas Exp $
+#	$OpenBSD: Makefile,v 1.5 2001/06/04 23:08:18 millert Exp $
 #	$NetBSD: Makefile,v 1.5 1995/04/20 22:37:12 cgd Exp $
 
-# missing: bin libexec sbin usr.bin usr.sbin share games gnu
+# missing: libexec sbin usr.bin usr.sbin share games gnu
 
-SUBDIR+= include lib sys share usr.bin
+SUBDIR+= bin include lib sys share usr.bin
 
 regress: _SUBDIRUSE
 
