--- a/kerberosV/Makefile
+++ b/kerberosV/Makefile
@@ -1,13 +1,13 @@
-# $OpenBSD: Makefile,v 1.2 2001/05/25 12:00:47 jakob Exp $
+# $OpenBSD: Makefile,v 1.3 2001/06/05 10:06:20 hin Exp $
 
 SUBDIR	= usr.bin/asn1_compile lib usr.bin libexec usr.sbin
 
 build:
-	( cd lib/roken && ${MAKE} )
-	( cd usr.bin/asn1_compile && ${MAKE} && ${SUDO} ${MAKE} install )
+	cd lib/roken && exec ${MAKE}
+	cd usr.bin/asn1_compile && ${MAKE} && exec ${SUDO} ${MAKE} install
 	${SUDO} ${MAKE} includes
 	${MAKE} depend
-	( cd lib && ${MAKE} && ${SUDO} ${MAKE} install )
+	cd lib && ${MAKE} && exec ${SUDO} ${MAKE} install
 	${MAKE}
 	${SUDO} ${MAKE} install
 
