--- a/kerberosIV/lib/kafs/Makefile
+++ b/kerberosIV/lib/kafs/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.6 2001/01/09 02:41:17 angelos Exp $
+# $OpenBSD: Makefile,v 1.7 2001/06/05 10:10:58 hin Exp $
 
 LIB	= kafs
 
@@ -13,10 +13,16 @@ CFLAGS += -I${KRBSRC}/lib/kafs
 
 SRCS=	afssys_openbsd.c \
 	afskrb.c \
-	$(afskrb5_c) \
 	common.c \
 	kafs_locl.h \
 	afssysdefs.h
+
+.include <bsd.own.mk> # for KERBEROS5
+
+.if (${KERBEROS5:L} == "yes")
+SRCS+=	afskrb5.c
+CFLAGS+=-DKRB5 -I${DESTDIR}/usr/include/kerberosV
+.endif
 
 MAN=	kafs.3
 MLINKS=	kafs.3 k_hasafs.3 \
