--- a/kerberosV/lib/kadm5srv/Makefile
+++ b/kerberosV/lib/kadm5srv/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.2 2001/05/25 12:38:17 ho Exp $
+# $OpenBSD: Makefile,v 1.3 2001/06/05 10:38:35 hin Exp $
 
 LIB=	kadm5srv
 
@@ -6,8 +6,7 @@ KRBDEPTH=../..
 .include <${.CURDIR}/../../Makefile.inc>
 
 INCLUDE_DIR=	${DESTDIR}/usr/include/kerberosV/kadm5
-INCLUDE_FILES=	${KRB5SRC}/lib/kadm5/admin.h ${KRB5SRC}/lib/kadm5/private.h \
-		kadm5_err.h
+INCLUDE_FILES=	${KRB5SRC}/lib/kadm5/{admin.h,private.h} kadm5_err.h
 
 includes:	kadm5_err.h
 
