--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,10 +1,10 @@
-#	$OpenBSD: Makefile,v 1.39 2001/02/04 21:41:41 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.40 2001/06/07 19:34:22 deraadt Exp $
 #	$NetBSD: Makefile,v 1.20.4.1 1996/06/14 17:22:38 cgd Exp $
 
 SUBDIR=	csu libarch libc libc_r libcom_err libcompat libcurses libdes libedit \
 	libform libkeynote libl libm libmenu libocurses libossaudio libpanel \
-	libpcap libresolv librpcsvc libskey libssl libtelnet libutil libwrap \
-	liby libz
+	libpcap libresolv librpcsvc libskey libsectok libssl libtelnet \
+	libutil libwrap liby libz
 
 # XXX Temporary until libcurses++ builds on mips again
 .if ${MACHINE_ARCH} != "mips"
