--- a/sbin/isakmpd/regress/crypto/Makefile
+++ b/sbin/isakmpd/regress/crypto/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.7 2001/02/24 04:42:48 angelos Exp $
+#	$OpenBSD: Makefile,v 1.8 2001/06/12 21:47:29 niklas Exp $
 #	$EOM: Makefile,v 1.7 2000/03/28 21:22:06 ho Exp $
 
 # Test Crypto:
@@ -11,7 +11,7 @@ OS!=		awk '/^OS=/ { print $$2 }' ${.CURDIR}/../../Makefile
 .PATH:		${TOPSRC} ${TOPSRC}/sysdep/${OS} ${TOPOBJ}
 CFLAGS+=	-I${TOPSRC} -I${TOPSRC}/sysdep/${OS} -I${TOPOBJ} -Wall \
 		-DUSE_TRIPLEDES -DUSE_CAST -DUSE_BLOWFISH -DUSE_DES
-LDADD+=		-ldes
+LDADD+=		-lcrypto
 DPADD+=		${LIBDES}
 NOMAN=
 DEBUG=		-g
