--- a/usr.bin/login/Makefile
+++ b/usr.bin/login/Makefile
@@ -1,9 +1,13 @@
-#	$OpenBSD: Makefile,v 1.18 2001/05/29 22:18:57 millert Exp $
+#	$OpenBSD: Makefile,v 1.19 2001/06/13 20:37:24 millert Exp $
 
 PROG=	login
 SRCS=	login.c failedlogin.c
 DPADD=	${LIBUTIL}
 LDADD=	-lutil
+
+.if (${MACHINE_ARCH} == "alpha")
+LDSTATIC=	${STATIC}
+.endif
 
 BINOWN=	root
 BINMODE=4555
