--- a/regress/sys/kern/Makefile
+++ b/regress/sys/kern/Makefile
@@ -1,7 +1,7 @@
-#	$OpenBSD: Makefile,v 1.4 2001/01/29 02:05:54 niklas Exp $
+#	$OpenBSD: Makefile,v 1.5 2001/06/19 08:41:57 niklas Exp $
 #	$NetBSD: Makefile,v 1.2 1995/04/20 22:42:51 cgd Exp $
 
-SUBDIR+= execve
+SUBDIR+= execve mmap
 
 regress: _SUBDIRUSE
 
