--- a/libexec/login_lchpass/Makefile
+++ b/libexec/login_lchpass/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.2 2001/01/28 19:34:30 niklas Exp $
+#	$OpenBSD: Makefile,v 1.3 2001/06/19 16:38:21 millert Exp $
 
 #	BSDI	$From: Makefile,v 1.2 1997/08/08 18:58:22 prb Exp $
 
@@ -7,7 +7,7 @@ SRCS=	login_lchpass.c local_passwd.c pwd_check.c pwd_gensalt.c
 MAN=	login_lchpass.8
 .PATH:	${.CURDIR}/../../usr.bin/passwd
 
-CFLAGS+=-Wall
+CFLAGS+=-Wall -Wno-unused
 LDADD+=	-lutil
 DPADD+=	${LIBUTIL}
 
