--- a/share/man/man8/man8.alpha/Makefile
+++ b/share/man/man8/man8.alpha/Makefile
@@ -1,9 +1,9 @@
-#	$OpenBSD: Makefile,v 1.2 2001/01/29 02:11:14 niklas Exp $
+#	$OpenBSD: Makefile,v 1.3 2001/06/21 08:10:14 mpech Exp $
 #	$NetBSD: Makefile,v 1.3 1995/09/06 21:36:38 jtc Exp $
 
 MAN=	boot_alpha.8
 #MAN=	MAKEDEV.8 boot_alpha.8
 #MLINKS=	MAKEDEV.8 makedev.8
-MANSUBDIR=/alpha
+MANSUBDIR=alpha
 
 .include <bsd.prog.mk>
