--- a/share/man/man8/man8.amiga/Makefile
+++ b/share/man/man8/man8.amiga/Makefile
@@ -1,8 +1,8 @@
-#	$OpenBSD: Makefile,v 1.3 2001/01/29 02:11:15 niklas Exp $
+#	$OpenBSD: Makefile,v 1.4 2001/06/21 08:10:14 mpech Exp $
 #	$NetBSD: Makefile,v 1.3 1995/09/06 21:36:32 jtc Exp $
 
 MAN=	MAKEDEV.8 boot_amiga.8
 MLINKS=	MAKEDEV.8 makedev.8
-MANSUBDIR=/amiga
+MANSUBDIR=amiga
 
 .include <bsd.prog.mk>
