--- a/share/man/man8/man8.arm32/Makefile
+++ b/share/man/man8/man8.arm32/Makefile
@@ -1,8 +1,8 @@
-#	$OpenBSD: Makefile,v 1.2 2000/11/09 03:57:33 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.3 2001/06/21 08:10:15 mpech Exp $
 #	from: @(#)Makefile	5.1 (Berkeley) 3/22/91
 
 MAN=	MAKEDEV.8 boot_arm32.8
 MLINKS=	MAKEDEV.8 makedev.8
-MANSUBDIR=/arm32
+MANSUBDIR=arm32
 
 .include <bsd.prog.mk>
