--- a/share/man/man8/man8.hp300/Makefile
+++ b/share/man/man8/man8.hp300/Makefile
@@ -1,8 +1,8 @@
-#	$OpenBSD: Makefile,v 1.3 2001/01/29 02:11:16 niklas Exp $
+#	$OpenBSD: Makefile,v 1.4 2001/06/21 08:10:15 mpech Exp $
 #	$NetBSD: Makefile,v 1.6 1995/09/06 21:36:34 jtc Exp $
 
 MAN=	MAKEDEV.8 boot_hp300.8 format.8
 MLINKS=	MAKEDEV.8 makedev.8
-MANSUBDIR=/hp300
+MANSUBDIR=hp300
 
 .include <bsd.prog.mk>
