--- a/share/man/man8/man8.sun3/Makefile
+++ b/share/man/man8/man8.sun3/Makefile
@@ -1,8 +1,8 @@
-#	$OpenBSD: Makefile,v 1.3 2001/01/29 02:11:19 niklas Exp $
+#	$OpenBSD: Makefile,v 1.4 2001/06/21 08:10:17 mpech Exp $
 #	$NetBSD: Makefile,v 1.3 1995/09/06 21:36:39 jtc Exp $
 
 MAN=	MAKEDEV.8 boot_sun3.8
 MLINKS=	MAKEDEV.8 makedev.8
-MANSUBDIR=/sun3
+MANSUBDIR=sun3
 
 .include <bsd.prog.mk>
