--- a/share/man/man8/man8.vax/Makefile
+++ b/share/man/man8/man8.vax/Makefile
@@ -1,8 +1,8 @@
-#	$OpenBSD: Makefile,v 1.3 2001/01/29 02:11:19 niklas Exp $
+#	$OpenBSD: Makefile,v 1.4 2001/06/21 08:10:18 mpech Exp $
 #	$NetBSD: Makefile,v 1.5 1995/09/06 21:36:42 jtc Exp $
 
 MAN=	MAKEDEV.8 boot_vax.8 drtest.8 format.8 installboot.8
 MLINKS=	MAKEDEV.8 makedev.8
-MANSUBDIR=/vax
+MANSUBDIR=vax
 
 .include <bsd.prog.mk>
