--- a/kerberosV/usr.bin/Makefile
+++ b/kerberosV/usr.bin/Makefile
@@ -1,7 +1,7 @@
-# $OpenBSD: Makefile,v 1.2 2001/05/25 22:14:38 hin Exp $
+# $OpenBSD: Makefile,v 1.3 2001/06/21 23:31:23 hin Exp $
 
 # XXX asn1_compile is compiled in ../Makefile
 
-SUBDIR	=  kauth klist kdestroy kinit
+SUBDIR	=  kauth klist kdestroy kinit pagsh
 
 .include <bsd.subdir.mk>
