--- a/kerberosV/Makefile
+++ b/kerberosV/Makefile
@@ -1,6 +1,6 @@
-# $OpenBSD: Makefile,v 1.3 2001/06/05 10:06:20 hin Exp $
+# $OpenBSD: Makefile,v 1.4 2001/06/21 23:45:27 hin Exp $
 
-SUBDIR	= usr.bin/asn1_compile lib usr.bin libexec usr.sbin
+SUBDIR	= usr.bin/asn1_compile lib usr.bin libexec usr.sbin doc
 
 build:
 	cd lib/roken && exec ${MAKE}
