--- a/kerberosV/lib/Makefile
+++ b/kerberosV/lib/Makefile
@@ -1,5 +1,5 @@
-# $OpenBSD: Makefile,v 1.2 2001/05/25 12:58:49 hin Exp $
+# $OpenBSD: Makefile,v 1.3 2001/06/22 16:06:50 hin Exp $
 
-SUBDIR	= roken asn1 krb5 hdb kadm5clnt kadm5srv 45 kafs gssapi
+SUBDIR	= roken asn1 krb5 hdb kadm5clnt kadm5srv 45 gssapi
 
 .include <bsd.subdir.mk>
