--- a/kerberosV/usr.sbin/kadmin/Makefile
+++ b/kerberosV/usr.sbin/kadmin/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.1 2001/05/25 08:21:12 hin Exp $
+# $OpenBSD: Makefile,v 1.2 2001/06/22 16:12:19 hin Exp $
 
 KRBDEPTH=../..
 .include <${.CURDIR}/../../Makefile.inc>
@@ -26,6 +26,6 @@ SRCS=	ank.c \
 .PATH:	${KRB5SRC}/kadmin
 CFLAGS+=-I${KRB5SRC}/lib/krb5 -I${KRB5SRC}/lib/kadm5
 LDADD+=	${LIBSL} -lreadline -lcurses -lkrb -ldes -lhdb \
-	-lkrb5 -lkadm5srv -lkadm5clnt ${LIBROKEN}
+	-lkadm5srv -lkadm5clnt -lkrb5 ${LIBROKEN} -lasn1 -lcrypto
 
 .include <bsd.prog.mk>
