--- a/kerberosV/usr.bin/kdestroy/Makefile
+++ b/kerberosV/usr.bin/kdestroy/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.2 2001/06/22 16:12:18 hin Exp $
+# $OpenBSD: Makefile,v 1.3 2001/06/23 00:17:46 hin Exp $
 
 KRBDEPTH=../..
 .include <${.CURDIR}/../../Makefile.inc>
@@ -9,6 +9,6 @@ SRCS=	kdestroy.c
 
 .PATH:	${KRB5SRC}/kuser
 
-LDADD+=	-lkrb5 -ldes -lkafs -lkrb -lasn1 -lcrypto ${LIBROKEN}
+LDADD+=	-lkrb5 -ldes -lkafs -lkrb -lasn1 -lcrypto ${LIBROKEN} -lcom_err
 
 .include <bsd.prog.mk>
