--- a/kerberosV/usr.bin/kinit/Makefile
+++ b/kerberosV/usr.bin/kinit/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.2 2001/06/22 16:12:18 hin Exp $
+# $OpenBSD: Makefile,v 1.3 2001/06/23 00:17:46 hin Exp $
 
 KRBDEPTH=../..
 .include <${.CURDIR}/../../Makefile.inc>
@@ -9,6 +9,7 @@ SRCS=	kinit.c kinit_options.c
 
 .PATH:	${KRB5SRC}/kuser
 
-LDADD+=	-lkrb5 -ldes -lkafs -l45 -lkrb -lkafs ${LIBROKEN} -lasn1 -lcrypto
+LDADD+=	-lkrb5 -ldes -lkafs -l45 -lkrb -lkafs ${LIBROKEN} -lasn1 -lcrypto \
+	-lcom_err
 
 .include <bsd.prog.mk>
