--- a/kerberosV/usr.bin/klist/Makefile
+++ b/kerberosV/usr.bin/klist/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.2 2001/06/22 16:12:19 hin Exp $
+# $OpenBSD: Makefile,v 1.3 2001/06/23 00:17:47 hin Exp $
 
 KRBDEPTH=../..
 .include <${.CURDIR}/../../Makefile.inc>
@@ -10,6 +10,6 @@ SRCS=	klist.c
 .PATH:	${KRB5SRC}/kuser
 
 CFLAGS+=-I${KRB5SRC}/lib/roken
-LDADD+=	-lkrb5 -ldes -lkafs -lkrb ${LIBROKEN} -lasn1 -lcrypto
+LDADD+=	-lkrb5 -ldes -lkafs -lkrb ${LIBROKEN} -lasn1 -lcrypto -lcom_err
 
 .include <bsd.prog.mk>
