--- a/kerberosV/usr.sbin/kadmin/Makefile
+++ b/kerberosV/usr.sbin/kadmin/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.2 2001/06/22 16:12:19 hin Exp $
+# $OpenBSD: Makefile,v 1.3 2001/06/23 00:17:47 hin Exp $
 
 KRBDEPTH=../..
 .include <${.CURDIR}/../../Makefile.inc>
@@ -21,11 +21,12 @@ SRCS=	ank.c \
 	version4.c \
 	util.c \
 	random_password.c \
-	kadmin_locl.h
+	kadmin_locl.h \
+	kadm_conn.c
 
 .PATH:	${KRB5SRC}/kadmin
 CFLAGS+=-I${KRB5SRC}/lib/krb5 -I${KRB5SRC}/lib/kadm5
-LDADD+=	${LIBSL} -lreadline -lcurses -lkrb -ldes -lhdb \
-	-lkadm5srv -lkadm5clnt -lkrb5 ${LIBROKEN} -lasn1 -lcrypto
+LDADD+=	${LIBSL} -lreadline -lcurses -lkrb -lhdb \
+	-lkadm5srv -lkadm5clnt -lkrb5 ${LIBROKEN} -lasn1 -lcrypto -lcom_err
 
 .include <bsd.prog.mk>
