--- a/kerberosV/usr.sbin/ktutil/Makefile
+++ b/kerberosV/usr.sbin/ktutil/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.2 2001/06/22 16:12:19 hin Exp $
+# $OpenBSD: Makefile,v 1.3 2001/06/23 00:17:48 hin Exp $
 
 KRBDEPTH=../..
 .include <${.CURDIR}/../../Makefile.inc>
@@ -10,7 +10,7 @@ SRCS=	add.c change.c copy.c get.c ktutil.c list.c purge.c remove.c
 
 .PATH:	${KRB5SRC}/admin
 CFLAGS+=-I${KRB5SRC}/lib/krb5 -I${KRB5SRC}/lib/kadm5
-LDADD+=	${LIBSL} -lreadline -lcurses -lkrb -ldes -lhdb \
-	-lkadm5srv -lkadm5clnt -lhdb -lkrb5 ${LIBROKEN} -lasn1 -lcrypto
+LDADD+=	${LIBSL} -lreadline -lcurses -lkrb -lhdb -lkadm5srv -lkadm5clnt \
+	-lhdb -lkrb5 ${LIBROKEN} -lasn1 -lcrypto -lcom_err
 
 .include <bsd.prog.mk>
