--- a/libexec/telnetd/Makefile
+++ b/libexec/telnetd/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.11 2001/06/22 16:14:55 hin Exp $
+#	$OpenBSD: Makefile,v 1.12 2001/06/23 02:50:52 hin Exp $
 #	from: @(#)Makefile	8.2 (Berkeley) 12/15/93
 #	$NetBSD: Makefile,v 1.6 1996/02/24 01:22:12 jtk Exp $
 
@@ -16,12 +16,12 @@ MAN=	telnetd.8
 
 .if (${KERBEROS:L} == "yes")
 CFLAGS+=-DENCRYPTION -DAUTHENTICATION -DKRB4 -I${.CURDIR}/../../lib
-LDADD+= -lkrb -ldes
+LDADD+= -lkrb -lcrypto
 DPADD+= ${LIBDES} ${LIBKRB}
 .endif
 
 .if (${KERBEROS5:L} == "yes")
-LDADD+=	-lkrb5 -lasn1 -lcrypto
+LDADD+=	-lkrb5 -lasn1 -lcrypto -lcom_err
 .endif
 
 .include <bsd.prog.mk>
