--- a/usr.bin/mg/Makefile
+++ b/usr.bin/mg/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.8 2001/05/24 10:58:33 art Exp $
+# $OpenBSD: Makefile,v 1.9 2001/06/23 04:22:45 art Exp $
 
 PROG=	mg
 
@@ -22,7 +22,7 @@ SRCS=	cinfo.c fileio.c spawn.c ttyio.c tty.c ttykbd.c \
 	basic.c dir.c dired.c file.c line.c match.c paragraph.c \
 	random.c region.c search.c version.c window.c word.c \
 	buffer.c display.c echo.c extend.c help.c kbd.c keymap.c \
-	macro.c main.c modes.c re_search.c funmap.c
+	macro.c main.c modes.c re_search.c funmap.c theo.c
 
 #
 # More or less standalone extensions.
