--- a/libexec/telnetd/Makefile
+++ b/libexec/telnetd/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.12 2001/06/23 02:50:52 hin Exp $
+#	$OpenBSD: Makefile,v 1.13 2001/06/23 19:44:31 hin Exp $
 #	from: @(#)Makefile	8.2 (Berkeley) 12/15/93
 #	$NetBSD: Makefile,v 1.6 1996/02/24 01:22:12 jtk Exp $
 
@@ -7,7 +7,7 @@ PROG=	telnetd
 CFLAGS+=-DLINEMODE -DKLUDGELINEMODE -DUSE_TERMIO -DDIAGNOSTICS
 CFLAGS+=-DOLD_ENVIRON -DENV_HACK -I${.CURDIR} -Wall -Wno-unused
 SRCS=	authenc.c global.c slc.c state.c sys_term.c telnetd.c \
-	termstat.c utility.c
+	termstat.c utility.c mini_inetd.c socket.c
 DPADD=	${LIBUTIL} ${LIBCURSES} ${LIBTELNET}
 LDADD+=	-lutil -lcurses -ltelnet
 MAN=	telnetd.8
