--- a/lib/libskey/Makefile
+++ b/lib/libskey/Makefile
@@ -1,9 +1,18 @@
-# $OpenBSD: Makefile,v 1.5 2000/03/02 00:29:51 todd Exp $
+# $OpenBSD: Makefile,v 1.6 2001/06/23 21:34:40 millert Exp $
 
 LIB=	skey
 SRCS=	skeylogin.c skeysubr.c put.c
 HDRS=	skey.h
-#CFLAGS+= -DSKEY_MDX_DEFAULT=4
+MAN+=	skey.3
+MLINKS+=skey.3 atob8.3 skey.3 backspace.3 skey.3 btoa8.3 skey.3 btoe.3 \
+	skey.3 etob.3 skey.3 f.3 skey.3 htoi.3 skey.3 keycrunch.3 \
+	skey.3 put8.3 skey.3 readpass.3 skey.3 readskey.3 skey.3 rip.3 \
+	skey.3 sevenbit.3 skey.3 skey_authenticate.3 \
+	skey.3 skey_get_algorithm.3 skey.3 skey_haskey.3 skey.3 skey_keyinfo.3 \
+	skey.3 skey_passcheck.3 skey.3 skey_set_algorithm.3 \
+	skey.3 skey_unlock.3 skey.3 skeychallenge.3 skey.3 skeygetnext.3 \
+	skey.3 skeylookup.3 skey.3 skeyverify.3 skey.3 skeyzero.3 \
+	skey.3 skipspace.3
 
 includes:
 	@cd ${.CURDIR}; for i in $(HDRS); do \
