--- a/kerberosV/usr.bin/Makefile
+++ b/kerberosV/usr.bin/Makefile
@@ -1,7 +1,7 @@
-# $OpenBSD: Makefile,v 1.3 2001/06/21 23:31:23 hin Exp $
+# $OpenBSD: Makefile,v 1.4 2001/06/23 21:54:07 hin Exp $
 
 # XXX asn1_compile is compiled in ../Makefile
 
-SUBDIR	=  kauth klist kdestroy kinit pagsh
+SUBDIR	=  kauth klist kdestroy kinit pagsh verify_krb5_conf
 
 .include <bsd.subdir.mk>
